{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 82,
  "lineage": "f228f8a4-fbb0-4292-5cd9-fcb6b73e1815",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:877505174099:vpc/vpc-f672599f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a07b66c9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c596965",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f672599f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-46efd72f",
            "owner_id": "877505174099",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "TF_ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:loadbalancer/app/TF-app-load-balancer/1ef6762a9a49b1e4",
            "arn_suffix": "app/TF-app-load-balancer/1ef6762a9a49b1e4",
            "dns_name": "TF-app-load-balancer-1067028335.eu-west-3.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:loadbalancer/app/TF-app-load-balancer/1ef6762a9a49b1e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "TF-app-load-balancer",
            "security_groups": [
              "sg-00f9af3ad5b7a7a26"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-77cc7e3a"
              },
              {
                "subnet_id": "subnet-892e78e0"
              },
              {
                "subnet_id": "subnet-9f7f16e4"
              }
            ],
            "subnets": [
              "subnet-77cc7e3a",
              "subnet-892e78e0",
              "subnet-9f7f16e4"
            ],
            "vpc_id": "vpc-f672599f",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "depends_on": [
            "aws_security_group.TF_HTTP_ONLY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "TF_ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:listener/app/TF-app-load-balancer/1ef6762a9a49b1e4/36cb02f873e9e3a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:targetgroup/TF-target-group/a8cf857b9ed75b6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:listener/app/TF-app-load-balancer/1ef6762a9a49b1e4/36cb02f873e9e3a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:loadbalancer/app/TF-app-load-balancer/1ef6762a9a49b1e4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.TF_ALB",
            "aws_lb_target_group.TF_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TF_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:targetgroup/TF-target-group/a8cf857b9ed75b6a",
            "arn_suffix": "targetgroup/TF-target-group/a8cf857b9ed75b6a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:877505174099:targetgroup/TF-target-group/a8cf857b9ed75b6a",
            "lambda_multi_value_headers_enabled": false,
            "name": "TF-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f672599f"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TF_HTTP_INTERNAL_ONLY",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:877505174099:security-group/sg-072f1d1e719fb11e1",
            "description": "HTTP_ONLY_INTERNAL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072f1d1e719fb11e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TF_HTTP_INTERNAL",
            "name_prefix": null,
            "owner_id": "877505174099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_HTTP_ONLY_INTERNAL"
            },
            "timeouts": null,
            "vpc_id": "vpc-f672599f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TF_HTTP_ONLY",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:877505174099:security-group/sg-00f9af3ad5b7a7a26",
            "description": "HTTP_ONLY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f9af3ad5b7a7a26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TF_HTTP",
            "name_prefix": null,
            "owner_id": "877505174099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_HTTP_ONLY"
            },
            "timeouts": null,
            "vpc_id": "vpc-f672599f"
          }
        }
      ]
    }
  ]
}